	patch 201_fix_man_su_fr
	* man/it/it.po, man/Makefile.am, man/it/Makefile.am:
	Use gettext for the Italian man pages translation. Imported from
	Debian's patch 202_it_man_uses_gettext. Thanks to Giuseppe
	Sacco who contributed the Italian translation.
	* man/de/de.po: (nearly) complete German translation of man pages
	Imported from Debian's patch 203_de-man-update. Thanks to 
	Simon Brandmair

2007-10-13  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, po/zh_CN.po: Updated Chinese translation. Imported from
	Debian's patch 105_zh_CN. Thanks to Ming Hua for the update.

2007-10-13  Tommi Vainikainen  <thv+debian@iki.fi>

	* NEWS, po/fi.po: Updated Finish translation (400t).

2007-10-13  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/su.c: If compiled without PAM support, enforce the
	limits from /etc/limits when one of the -, -l, or --login options
	is set, even if called by root. Thanks to Justin Bronder.

2007-10-07  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, Changelog: Convert the Changelog and NEWS files to UTF-8
	(it was partially ISO-8859-2).

2007-02-01  Tomasz Kłoczko  <kloczek@pld.org.pl>

	* NEWS, man/groupadd.8.xml, man/groupmod.8.xml, man/login.1.xml, man/useradd.8.xml, man/userdel.8.xml, man/usermod.8.xml:
	groupadd.8, groupmod.8, login.1, useradd.8, userdel.8, usermod.8: grammar
	mistakes and other correctstions (by Schulenberg <bensberg@justemail.net>).

2007-01-16  Tomasz Kłoczko  <kloczek@pld.org.pl>

	* NEWS, src/usermod.c:
	fixed handle -a option in usermod (by Benno Schulenberg <bensberg@justemail.net>).

2006-12-15  Tomasz Kłoczko  <kloczek@pld.org.pl>

	* man/sv/sv.po:
	more UTF8 fixe (by Mikael Magnusson <mikma@users.sourceforge.net>).

	* man/sv/sv.po:
	UTF8 fixes (by Mikael Magnusson <mikma@users.sourceforge.net>).

2006-11-19  Tomasz Kłoczko  <kloczek@pld.org.pl>

	* man/pl/Makefile.am, man/pl/chgpassw.8, man/pl/chpasswd.8, man/pl/pl.po:
	translation chpasswd.8 and chgpassw.8 finished.