@@ -275,8 +275,6 @@ static void usage (void)
 	fprintf (stderr, _("Usage: usermod [options] LOGIN\n"
 			   "\n"
 			   "Options:\n"
-			   "  -a, --append			append the user to the supplemental GROUPS\n"
-			   "				(use only with -G)\n"
 			   "  -c, --comment COMMENT		new value of the GECOS field\n"
 			   "  -d, --home HOME_DIR		new home directory for the user account\n"
 			   "  -e, --expiredate EXPIRE_DATE	set account expiration date to EXPIRE_DATE\n"
@@ -284,6 +282,9 @@ static void usage (void)
 			   "				to INACTIVE\n"
 			   "  -g, --gid GROUP		force use GROUP as new primary group\n"
 			   "  -G, --groups GROUPS		new list of supplementary GROUPS\n"
+			   "  -a, --append		append the user to the supplemental GROUPS\n"
+			   "				mentioned by the -G option without removing\n"
+			   "				him/her from other groups\n"
 			   "  -h, --help			display this help message and exit\n"
 			   "  -l, --login NEW_LOGIN		new value of the login name\n"
 			   "  -L, --lock			lock the user account\n"
