@@ -14,6 +14,8 @@
 	* man/de/de.po: (nearly) complete German translation of man pages
 	Imported from Debian's patch 203_de-man-update. Thanks to 
 	Simon Brandmair
+	* src/usermod.c: Clarify the online help of usermod for "-a"
+	Imported from Debian's patch 402-clarify_usermod_usage
 
 2007-10-13  Nicolas François  <nicolas.francois@centraliens.net>
 
